<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="320dp"
    android:paddingTop="5dp"
    android:paddingEnd="10dp"
    android:paddingStart="10dp"
    android:paddingBottom="15dp"
    android:background="@drawable/dialog_back_ground"
    android:layout_height="wrap_content"
    tools:context="com.company.alibaba.activities.BeforeCheckOutInfoDialog">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        android:layout_width="match_parent">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:gravity="center_vertical|start"
                android:text="@string/beforeCheckOutPhone"
                android:textColor="@color/text_color" />

            <EditText
                android:id="@+id/beforePhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="30"
                android:inputType="phone"
                android:background="@drawable/login_text_view_bg"
                android:hint="12312345678"
                android:paddingBottom="3dp"
                android:layoutDirection="ltr"
                android:maxLines="1"
                android:maxLength="15"
                android:textColorHint="@color/hintTextColor"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:paddingTop="3dp"
                android:textColor="@color/text_color"
                android:textSize="15sp" />
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:gravity="center_vertical|start"
                android:text="@string/beforeCheckOutCountry"
                android:textColor="@color/text_color" />

            <Spinner
                android:id="@+id/beforeCountryName"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layoutDirection="ltr"
                style="@style/AppTheme"
                android:layout_weight="30"
                android:inputType="textPersonName"
                android:background="@drawable/login_text_view_bg"
                android:hint="Country Name"
                android:paddingBottom="3dp"
                android:maxLines="1"
                android:maxLength="10"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:paddingTop="3dp"
                android:textColor="#000"
                android:textSize="15sp" />
        </android.support.v7.widget.LinearLayoutCompat>


        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:gravity="center_vertical|start"
                android:text="@string/beforeCheckOutCity"
                android:textColor="@color/text_color" />

            <EditText
                android:id="@+id/beforeCityName"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="30"
                android:inputType="textPersonName"
                android:background="@drawable/login_text_view_bg"
                android:hint="City Name"
                android:layoutDirection="ltr"
                android:paddingBottom="3dp"
                android:textColorHint="@color/hintTextColor"
                android:maxLines="1"
                android:maxLength="10"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:paddingTop="3dp"
                android:textColor="@color/text_color"
                android:textSize="15sp" />
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:gravity="center_vertical|start"
                android:text="@string/beforeCheckOutState"
                android:textColor="@color/text_color" />

            <EditText
                android:id="@+id/beforeState"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="30"
                android:background="@drawable/login_text_view_bg"
                android:hint="state name"
                android:inputType="textPersonName"
                android:layoutDirection="ltr"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingBottom="3dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:paddingTop="3dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/hintTextColor"
                android:textSize="15sp" />
        </android.support.v7.widget.LinearLayoutCompat>


        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:gravity="center_vertical|start"
                android:text="@string/beforeCheckOutAddress"
                android:textColor="@color/text_color" />

            <EditText
                android:id="@+id/beforeAddress"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="30"
                android:background="@drawable/login_text_view_bg"
                android:hint="full address"
                android:inputType="textPersonName"
                android:layoutDirection="ltr"
                android:maxLength="30"
                android:maxLines="1"
                android:paddingBottom="3dp"
                android:paddingEnd="5dp"
                android:paddingStart="5dp"
                android:paddingTop="3dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/hintTextColor"
                android:textSize="15sp" />

        </android.support.v7.widget.LinearLayoutCompat>



        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:gravity="center_vertical|start"
                android:text="@string/beforeCheckOutPostalCode"
                android:textColor="@color/text_color" />

            <EditText
                android:id="@+id/beforePostalCode"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_weight="30"
                android:inputType="datetime"
                android:background="@drawable/login_text_view_bg"
                android:hint="#####"
                android:layoutDirection="ltr"
                android:maxLines="1"
                android:maxLength="7"
                android:paddingBottom="3dp"
                android:paddingEnd="5dp"
                android:textColorHint="@color/hintTextColor"
                android:paddingStart="5dp"
                android:paddingTop="3dp"
                android:textColor="@color/text_color"
                android:textSize="15sp" />
        </android.support.v7.widget.LinearLayoutCompat>



    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:onClick="saveInfoBeforeCheckOut"
        android:background="@drawable/btn_background_drawable"
        android:textColor="@color/btn_text_color"
        android:text="@string/beforeCheckOutSaveInfoBtn"
        />


</LinearLayout>
